--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,9 @@
-.list-group-item {
-  line-height: 2.5;
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
+
+footer {
+  background-color: #f2f2f2;
+  padding: 25px;
 }
