--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div id="home">
-  <nav class="navbar">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -7,68 +7,129 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Portfolio</a>
+        <a class="btn btn-social-icon btn-twitter">
+          <span class="	fa fa-linkedin-square" style="font-size:48px; color: #f5f5f5;"></span>
+        </a>
+        <a class="btn btn-social-icon btn-twitter">
+          <span class="fa fa-github" style="font-size:48px; color: #f5f5f5;"></span>
+        </a>
+        <a class="btn btn-social-icon btn-twitter">
+          <span class="fa fa-file" style="font-size:40px; color: #f5f5f5;"></span>
+        </a>
+        {{!-- <a class="navbar-brand" href="#">Portfolio</a> --}}
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav nav-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Gallery</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="#">Tech News</a></li>
+
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        {{!-- <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
+        </ul> --}}
       </div>
     </div>
   </nav>
 
   <div class="jumbotron">
     <div class="container text-center">
-      <h1>My Portfolio</h1>
-      <p>Some text that represents "Me"...</p>
+      <h1>Alicia M. Garcia</h1>
+      <p>Full Stack Web Developer</p>
     </div>
   </div>
 
-  <div class="container-fluid bg-3 text-center">
-    <h3>Some of my Work</h3><br>
-    <div class="row">
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-    </div>
-  </div><br>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <h5 class="card-title divider text-white aboutMe">ABOUT ME</h5>
 
-  <div class="container-fluid bg-3 text-center">
-    <div class="row">
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      </div>
-      <div class="col-sm-3">
-        <p>Some text..</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <div class="card-body">
+          <img src="../img/kissclipart-woman-computer-programmer-clipart-computer-program-462fb3955bf62badcopy.png"
+            alt="girlonpc" class="aboutMeImg">
+          <p class="card-text">
+
+            <p>Self motivated and enthusiastic professional committed to pursuing a long-term career in web development
+              and programming as a new Full Stack Web Developer. Over 15 years of Forensic Science work experience in
+              law enforcement with strong analytical problem solving abilities and interpersonal skills in leadership,
+              time management, attention to detail and communication. Effective at combining conceptual thinking and
+              diverse solutions to develop web applications from inception to completion. Proven ability to adapt and
+              flourish in fast paced team environments by consistently meeting goals and producing high quality results
+            </p>
+          </p>
+        </div>
       </div>
     </div>
-  </div><br><br>
+
+
+    <div class="col d-flex">
+      <h5 class="title divider text-white bg-dark inspired">INSPIRED</h5>
+
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/aaron-burden-361231-unsplash.jpg" class="d-block w-100" alt="bee">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/casey-horner-1467959-unsplash.jpg" class="d-block w-100" alt="trees">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/eberhard-grossgasteiger-706486-unsplash.jpg" class="d-block w-100" alt="road">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+
+  <h3>Some of my Work</h3><br>
+  <div class="row">
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div><br>
+
+<div class="container-fluid bg-3 text-center">
+  <div class="row">
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-3">
+      <p>Some text..</p>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div><br><br>
