--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -21,6 +21,16 @@ body {
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
+  margin-top: 10px;
+}
+
+h1 {
+  margin-left: 15px;
+  font-family: "brave";
+}
+
+.btn-twitter {
+  margin-top: 10px;
 }
 
 footer {
@@ -33,6 +43,7 @@ footer {
   color: #f5f5f5;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 20px;
+  border-color: #222 !important;
 }
 
 .nav-link {
@@ -52,8 +63,8 @@ footer {
 }
 
 .aboutMeImg {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   float: left;
   padding-right: 15px;
   border-radius: 50%;
@@ -61,10 +72,7 @@ footer {
   shape-outside: inset(1% round 50%);
   margin-right: 20px;
 }
-img {
-  height: 508px;
-  background-color: #f5f5f5;
-}
+
 .card-img-top {
   height: 200px;
 }
@@ -72,15 +80,24 @@ img {
   text-align: center;
   font-family: "brave";
   padding: 10px;
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
-.inspired {
-  writing-mode: vertical-rl;
+.card-text {
+  /* text-align: inherit; */
+  font-size: 20px;
+}
+
+h2 {
+  /* writing-mode: vertical-rl;
   text-orientation: upright;
-  letter-spacing: 1px;
+  letter-spacing: 1px; */
   text-align: center;
   font-family: "brave";
-  padding: 5px;
-  font-size: 1.2rem;
+  padding: 10px;
+  font-size: 3rem;
+}
+
+#myCarousel {
+  height: 100%;
 }
