--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,14 +7,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <div class="navbar-header">
+          <h1>Portfolio</h1>
+        </div>
         <a class="btn btn-social-icon btn-twitter">
-          <span class="	fa fa-linkedin-square" style="font-size:48px; color: #f5f5f5;"></span>
+          <span class="	fa fa-linkedin-square" style="font-size:30px; color: #f5f5f5;"></span>
         </a>
         <a class="btn btn-social-icon btn-twitter">
-          <span class="fa fa-github" style="font-size:48px; color: #f5f5f5;"></span>
+          <span class="fa fa-github" style="font-size:35px; color: #f5f5f5;"></span>
         </a>
         <a class="btn btn-social-icon btn-twitter">
-          <span class="fa fa-file" style="font-size:40px; color: #f5f5f5;"></span>
+          <span class="fa fa-file" style="font-size:25px; color: #f5f5f5;"></span>
         </a>
         {{!-- <a class="navbar-brand" href="#">Portfolio</a> --}}
       </div>
@@ -41,95 +44,134 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="card">
-        <h5 class="card-title divider text-white aboutMe">ABOUT ME</h5>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-9">
+        <div class="card">
+          <h5 class="card-title divider text-white aboutMe">ABOUT ME</h5>
 
-        <div class="card-body">
-          <img src="../img/kissclipart-woman-computer-programmer-clipart-computer-program-462fb3955bf62badcopy.png"
-            alt="girlonpc" class="aboutMeImg">
-          <p class="card-text">
+          <div class="card-body">
+            <img src="../img/kissclipart-woman-computer-programmer-clipart-computer-program-462fb3955bf62badcopy.png"
+              alt="girlonpc" class="aboutMeImg">
 
-            <p>Self motivated and enthusiastic professional committed to pursuing a long-term career in web development
-              and programming as a new Full Stack Web Developer. Over 15 years of Forensic Science work experience in
-              law enforcement with strong analytical problem solving abilities and interpersonal skills in leadership,
+            <p class="card-text">
+
+              Self motivated and enthusiastic professional committed to pursuing a long-term career in web
+              development and programming as a new Full Stack Web Developer. Over 15 years of Forensic Science work
+              experience in law enforcement with strong analytical problem solving abilities and interpersonal skills in
+              leadership,
               time management, attention to detail and communication. Effective at combining conceptual thinking and
               diverse solutions to develop web applications from inception to completion. Proven ability to adapt and
-              flourish in fast paced team environments by consistently meeting goals and producing high quality results
+              flourish in fast paced team environments by consistently meeting goals and producing high quality
+              results
             </p>
-          </p>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <h2 class="title divider text-white bg-dark">INSPIRED</h2>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="../img/aaron-burden-361231-unsplash.jpg" alt="Los Angeles" style="width:100%;">
+            </div>
+
+            <div class="item">
+              <img src="../img/casey-horner-1467959-unsplash.jpg" alt="Chicago" style="width:100%;">
+            </div>
+
+            <div class="item">
+              <img src="../img/eberhard-grossgasteiger-706486-unsplash.jpg" alt="New york" style="width:100%;">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
     </div>
 
 
-    <div class="col d-flex">
-      <h5 class="title divider text-white bg-dark inspired">INSPIRED</h5>
 
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/images/aaron-burden-361231-unsplash.jpg" class="d-block w-100" alt="bee">
+
+    <h3>Some of my Work</h3><br>
+    <div class="row">
+      <div class="col-sm-3">
+        <p>Some text..</p>
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      </div>
+      <div class="col-sm-3">
+        <p>Some text..</p>
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      </div>
+      <div class="col-sm-3">
+        <p>Some text..</p>
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      </div>
+      <div class="col-sm-3">
+        <p>Some text..</p>
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-sm-6">
+        <h1>Tech News</h1>
+        <div id="feed"></div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card-header text-white bg-dark contactMe" style="width: 33rem">CONTACT ME</div>
+
+        <div class="card" style="width: 33rem;">
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <label for="formGroupInput" class="contactFormGroup">First Name</label>
+                <input type="text" class="form-control" id="firstName" placeholder="Jane">
+
+                <div class="form-group">
+                  <label for="formGroupInput2" class="contactFormGroup">Last Name</label>
+                  <input type="text" class="form-control" id="lastName" placeholder="Doe">
+
+                  <div class="form-group">
+                    <label for="formGroupInput3" class="contactFormGroup">Email Address</label>
+                    <input type="text" class="form-control" id="email" placeholder="Email@gmail.com">
+                    <div class="form-group">
+                      <label for="formGroupInput4" class="contactFormGroup">Comments</label>
+                      <textarea type="text" class="form-control" id="comments"
+                        placeholder="Type message here..."></textarea>
+
+                      <input class="btn btn-primary contactFormGroup" type="submit" value="Submit">
+                    </div>
+                  </div>
+                </div>
+            </form>
           </div>
-          <div class="carousel-item">
-            <img src="assets/images/casey-horner-1467959-unsplash.jpg" class="d-block w-100" alt="trees">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/images/eberhard-grossgasteiger-706486-unsplash.jpg" class="d-block w-100" alt="road">
-          </div>
+
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+
+
       </div>
     </div>
   </div>
+</div>
 
 
-  <h3>Some of my Work</h3><br>
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p>Some text..</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-  </div>
-</div><br><br>
+<br><br>
